--- a/SWD/SWD/InputDialog.xaml
+++ b/SWD/SWD/InputDialog.xaml
@@ -7,14 +7,21 @@
         mc:Ignorable="d"
         ShowInTaskbar="False" 
         WindowStyle="None" 
+        ShowActivated="True"
         ResizeMode="CanResize"
         Title="InputDialog" Height="175" Width="325" MinHeight="175" MinWidth="325">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="{Binding BackgroundGradEnd}"/>
+            <GradientStop Color="{Binding BackgroundGradStart}" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <StackPanel Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center">
-        <TextBlock Text="Enter the compotent name:" HorizontalAlignment="Center" />
+        <TextBlock FontWeight="DemiBold" Text="Enter the name:" HorizontalAlignment="Center" Foreground="{Binding Font}"/>
         <TextBox Name="InputTextBox" Width="250" Margin="0,10" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="OK" Width="120" Click="OKButton_Click"/>
-            <Button Content="Cancel" Width="120" Margin="10,0,0,0" Click="CancelButton_Click"/>
+            <Button Content="OK" Width="120" Margin="0,0,10,0" Click="OKButton_Click" />
+            <Button Content="Cancel" Width="120" Margin="0" Click="CancelButton_Click"/>
         </StackPanel>
     </StackPanel>
 </Window>
